feature(packaging) finished packaging for chrome devtool

--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
   ],
   "background": {
     "scripts": [
-      "background.js"
+      "background-main.js",
+      "background-runtime.js"
     ],
     "persistent": false
   },
